@@ -39,7 +39,6 @@ lazy val alpakka = project
     mongodb,
     mqtt,
     mqttStreaming,
-    orientdb,
     pravega,
     reference,
     s3,
@@ -67,7 +66,7 @@ lazy val alpakka = project
         |    starts a webserver and opens a new browser window
         |
         |  test - runs all the tests for all of the connectors.
-        |    Make sure to run `docker-compose up` first.
+        |    Make sure to run `docker compose up` first.
         |
         |  mqtt/testOnly *.MqttSourceSpec - runs a single test
         |
@@ -161,7 +160,15 @@ lazy val elasticsearch = alpakkaProject(
 )
 
 // The name 'file' is taken by `sbt.file`, hence 'files'
-lazy val files = alpakkaProject("file", "file", Dependencies.File, Scala3.settings)
+lazy val files = alpakkaProject(
+  "file",
+  "file",
+  Dependencies.File,
+  Scala3.settings,
+  // com.sun.nio.file.SensitivityWatchEventModifier is deprecated in Java 21
+  // https://bugs.openjdk.org/browse/JDK-8303175
+  fatalWarnings := false
+)
 
 lazy val ftp = alpakkaProject(
   "ftp",
@@ -213,7 +220,10 @@ lazy val googleCloudBigQueryStorage = alpakkaProject(
       "-Wconf:src=.+/akka-grpc/main/.+:s",
       "-Wconf:src=.+/akka-grpc/test/.+:s"
     ),
-  compile / javacOptions := (compile / javacOptions).value.filterNot(_ == "-Xlint:deprecation")
+  compile / javacOptions := (compile / javacOptions).value
+      .filterNot(_ == "-Xlint:deprecation"),
+  Test / fork := true,
+  Test / javaOptions += "--add-opens=java.base/java.nio=ALL-UNNAMED"
 ).dependsOn(googleCommon).enablePlugins(AkkaGrpcPlugin)
 
 lazy val googleCloudPubSub = alpakkaProject(
@@ -297,16 +307,6 @@ lazy val mqttStreamingBench = internalProject("mqtt-streaming-bench")
   .enablePlugins(JmhPlugin)
   .dependsOn(mqtt, mqttStreaming)
 
-lazy val orientdb =
-  alpakkaProject(
-    "orientdb",
-    "orientdb",
-    Dependencies.OrientDB,
-    Test / fork := true,
-    // note: orientdb client needs to be refactored to move off deprecated calls
-    fatalWarnings := false
-  )
-
 lazy val reference = internalProject("reference", Dependencies.Reference)
   .dependsOn(testkit % Test)
 
@@ -328,7 +328,7 @@ lazy val springWeb = alpakkaProject(
 
 lazy val simpleCodecs = alpakkaProject("simple-codecs", "simplecodecs", Scala3.settings)
 
-lazy val slick = alpakkaProject("slick", "slick", Dependencies.Slick)
+lazy val slick = alpakkaProject("slick", "slick", Dependencies.Slick, Scala3.settings)
 
 lazy val eventbridge =
   alpakkaProject("aws-event-bridge", "aws.eventbridge", Dependencies.Eventbridge).settings(Scala3.settings)
@@ -417,7 +417,7 @@ lazy val docs = project
         "extref.geode.base_url" -> s"https://geode.apache.org/docs/guide/${Dependencies.GeodeVersionForDocs}/%s",
         "extref.javaee-api.base_url" -> "https://docs.oracle.com/javaee/7/api/index.html?%s.html",
         "extref.paho-api.base_url" -> "https://www.eclipse.org/paho/files/javadoc/index.html?%s.html",
-        "extref.pravega.base_url" -> s"https://cncf.pravega.io/docs/${Dependencies.PravegaVersionForDocs}/%s",
+        "extref.pravega.base_url" -> s"https://cncf.pravega.io/docs/latest/%s",
         "extref.slick.base_url" -> s"https://scala-slick.org/doc/${Dependencies.SlickVersion}/%s",
         // Cassandra
         "extref.cassandra.base_url" -> s"https://cassandra.apache.org/doc/${Dependencies.CassandraVersionInDocs}/%s",
@@ -434,7 +434,6 @@ lazy val docs = project
         "javadoc.jakarta.jms.base_url" -> "https://jakarta.ee/specifications/messaging/3.1/apidocs/jakarta.messaging/",
         "javadoc.jakarta.jms.link_style" -> "direct",
         "javadoc.com.couchbase.base_url" -> s"https://docs.couchbase.com/sdk-api/couchbase-java-client-${Dependencies.CouchbaseVersion}/",
-        "javadoc.io.pravega.base_url" -> s"http://pravega.io/docs/${Dependencies.PravegaVersionForDocs}/javadoc/clients/",
         "javadoc.org.apache.kudu.base_url" -> s"https://kudu.apache.org/releases/${Dependencies.KuduVersion}/apidocs/",
         "javadoc.org.apache.hadoop.base_url" -> s"https://hadoop.apache.org/docs/r${Dependencies.HadoopVersion}/api/",
         "javadoc.software.amazon.awssdk.base_url" -> "https://sdk.amazonaws.com/java/api/latest/",
